# wit

./: Cargo.toml  README.md
src/: cli.rs  config.rs  error.rs  main.rs  query.rs
src/commands/: add.rs  backfill.rs  chart.rs  init.rs  locations.rs  log.rs  mod.rs  overlay_chart.rs  snap.rs  status.rs
src/display/: format.rs
src/git/: repo.rs
src/weather/: api.rs  codes.rs  mod.rs  models.rs  snapshot.rs
